--- a/feature/registerpost/src/main/res/drawable/btn_picture_delete.xml
+++ b/feature/registerpost/src/main/res/drawable/btn_picture_delete.xml
@@ -1,21 +1,7 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
-    android:height="24dp"
-    android:viewportWidth="24"
-    android:viewportHeight="24">
-  <path
-      android:pathData="M12,12m-12,0a12,12 0,1 1,24 0a12,12 0,1 1,-24 0"
-      android:fillColor="#9A70E2"/>
-  <path
-      android:pathData="M7.636,7.636L16.364,16.364"
-      android:strokeWidth="1.5"
-      android:fillColor="#00000000"
-      android:strokeColor="#ffffff"
-      android:strokeLineCap="round"/>
-  <path
-      android:pathData="M16.364,7.636L7.636,16.364"
-      android:strokeWidth="1.5"
-      android:fillColor="#00000000"
-      android:strokeColor="#ffffff"
-      android:strokeLineCap="round"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android" android:autoMirrored="true" android:height="24dp" android:viewportHeight="24" android:viewportWidth="24" android:width="24dp">
+      
+    <path android:fillColor="#9A70E2" android:pathData="M12,12m-12,0a12,12 0,1 1,24 0a12,12 0,1 1,-24 0"/>
+      
+    <path android:fillColor="#ffffff" android:pathData="M7.243,7.265C7.399,7.109 7.61,7.022 7.831,7.022C8.051,7.022 8.263,7.109 8.419,7.265L11.989,10.828L15.559,7.265C15.661,7.156 15.79,7.076 15.934,7.034C16.077,6.992 16.229,6.989 16.374,7.026C16.518,7.063 16.65,7.138 16.756,7.243C16.861,7.349 16.936,7.481 16.973,7.626C17.01,7.77 17.007,7.921 16.965,8.064C16.924,8.207 16.844,8.336 16.735,8.438L13.164,12L16.735,15.563C16.844,15.665 16.924,15.794 16.966,15.937C17.008,16.08 17.011,16.232 16.974,16.376C16.937,16.52 16.862,16.652 16.756,16.757C16.65,16.863 16.518,16.938 16.373,16.974C16.229,17.011 16.077,17.008 15.934,16.967C15.79,16.925 15.661,16.845 15.559,16.736L11.989,13.173L8.419,16.736C8.261,16.883 8.052,16.962 7.837,16.959C7.621,16.955 7.416,16.868 7.263,16.716C7.111,16.564 7.024,16.359 7.02,16.144C7.016,15.929 7.096,15.721 7.243,15.563L10.814,12L7.243,8.438C7.087,8.282 7,8.071 7,7.851C7,7.631 7.087,7.42 7.243,7.265Z"/>
+    
 </vector>
