feat: app logo 갱신

--- a/app/src/main/res/drawable/ic_app_logo_foreground.xml
+++ b/app/src/main/res/drawable/ic_app_logo_foreground.xml
@@ -3,44 +3,49 @@
     android:height="108dp"
     android:viewportWidth="160"
     android:viewportHeight="160">
-  <path
-      android:pathData="M80,80m-80,0a80,80 0,1 1,160 0a80,80 0,1 1,-160 0"
-      android:strokeWidth="0"
-      android:fillColor="#e8e8fc"/>
-  <path
-      android:pathData="m50.29,117.49h0c-0.2,0 -0.41,0 -0.61,0 -2.4,0 -4.71,-0.4 -6.86,-1.13 -11.28,-0.5 -20.27,-9.81 -20.27,-21.21 0,-9.05 5.66,-16.77 13.63,-19.83 0.39,-3.44 1.6,-6.63 3.43,-9.37 0.7,3.72 1.77,7.62 4.36,11.88 1.4,2.31 5.04,7.67 11.32,11.36 4.85,2.85 7.48,4.4 10.56,4.21 0.52,-0.03 1.89,-0.16 2.34,0.55 0.69,1.09 -1.18,3.41 -1.62,3.96 -0.84,1.05 -3.64,4.19 -11.96,6.17 -2.96,0.7 -7.41,1.44 -12.94,1.19 8.19,4.75 22.19,11.39 39.09,12.14l-30.46,0.07Z"
-      android:strokeWidth="0"
-      android:fillColor="#90efef"/>
-  <path
-      android:pathData="m112.46,58.82c-0.93,-0.64 -1.96,-1.21 -3.08,-1.51 -1.03,-0.28 -5.02,-1.19 -8.6,1.16 -0.69,0.45 -2.8,1.84 -3.63,4.37 -0.92,2.78 -0.65,8.01 -1.16,9.65 -0.05,0.15 -0.15,0.43 -0.39,0.68 -0.41,0.43 -1.07,0.62 -1.65,0.54 -0.43,-0.06 -0.72,-0.25 -1.03,-0.45 -0.44,-0.29 -0.71,-0.61 -0.87,-0.79 -0.94,-1.07 -1.21,-2.25 -1.27,-2.5 -0.61,-2.36 -5.22,-6.64 -5.62,-7.02 -4.76,-4.42 -10.73,-6.63 -17.54,-8.72 -0.21,-0.06 -0.41,-0.13 -0.61,-0.19 4.62,-6.94 12.51,-11.52 21.48,-11.52 10.89,0 20.21,6.76 23.98,16.31Z"
-      android:strokeWidth="0"
-      android:fillColor="#9a70e2"/>
-  <path
-      android:pathData="m137.46,95.71c0,12.03 -9.75,21.78 -21.78,21.78 -0.84,0 -1.68,-0.05 -2.5,-0.14l-25.96,0.06c13.37,-0.68 19.79,-5.29 21.87,-7.53 4.43,-4.74 5.85,-10.87 5.85,-10.87 1.2,-5.18 0.38,-10.1 0.03,-12.2 -0.69,-4.14 -1.6,-5.14 -1.5,-8.74 0.02,-0.97 0.08,-2.4 0.46,-4.08 0.58,-0.05 1.16,-0.07 1.74,-0.07 12.03,0 21.78,9.75 21.78,21.78Z"
-      android:strokeWidth="0"
-      android:fillColor="#bde4df"/>
-  <path
-      android:pathData="m113.47,78.07c-0.09,3.6 0.81,4.6 1.5,8.74 0.35,2.1 1.17,7.02 -0.03,12.2 0,0 -1.42,6.12 -5.85,10.87 -2.08,2.24 -8.5,6.85 -21.87,7.53l-6.48,0.02c-16.9,-0.75 -30.9,-7.39 -39.09,-12.14 5.53,0.25 9.98,-0.49 12.94,-1.19 8.32,-1.98 11.12,-5.12 11.96,-6.17 0.44,-0.55 2.31,-2.87 1.62,-3.96 -0.45,-0.72 -1.83,-0.58 -2.34,-0.55 -3.08,0.19 -5.71,-1.36 -10.56,-4.21 -6.28,-3.7 -9.92,-9.06 -11.32,-11.36 -2.59,-4.26 -3.66,-8.16 -4.36,-11.88 -0.22,-1.16 -0.4,-2.31 -0.58,-3.45 -0.71,-4.49 -1.27,-11.46 0.25,-20 1.68,1.08 4.06,2.51 7.02,4 1.25,0.63 5.22,2.59 11.83,4.85 4.34,1.48 6.44,1.95 8.88,2.67 0.2,0.06 0.41,0.12 0.61,0.19 6.81,2.09 12.78,4.3 17.54,8.72 0.41,0.38 5.02,4.66 5.62,7.02 0.06,0.25 0.33,1.43 1.27,2.5 0.16,0.18 0.44,0.51 0.87,0.79 0.31,0.2 0.6,0.39 1.03,0.45 0.58,0.08 1.24,-0.11 1.65,-0.54 0.24,-0.26 0.34,-0.54 0.39,-0.68 0.51,-1.64 0.24,-6.87 1.16,-9.65 0.84,-2.53 2.94,-3.92 3.63,-4.37 3.58,-2.36 7.57,-1.44 8.6,-1.16 1.12,0.3 2.15,0.87 3.08,1.51 0.92,0.64 1.75,1.35 2.48,1.95 0.61,0.5 1.49,1.28 2.92,2.24 1.04,0.7 1.93,1.21 2.53,1.53 -1.26,0.88 -3.51,2.7 -5.11,5.79 -0.67,1.29 -1.09,2.54 -1.35,3.67 -0.39,1.67 -0.44,3.1 -0.46,4.08Z"
-      android:strokeWidth="0"
-      android:fillColor="#fff"/>
-  <path
-      android:pathData="M106.9,63.42m-1.12,0a1.12,1.12 0,1 1,2.24 0a1.12,1.12 0,1 1,-2.24 0"
-      android:strokeWidth="0"
-      android:fillColor="#9a70e2"/>
-  <path
-      android:pathData="m136.2,103.05c0.39,-1.37 3.3,-12.25 -3.49,-20.94 -3.46,-4.43 -8.28,-6.37 -8.9,-6.62 -3.21,-1.29 -6.07,-1.54 -7.87,-1.56 0.23,-1.09 0.58,-2.34 1.12,-3.68 0.99,-2.48 2.28,-4.37 3.35,-5.71 -0.82,0.57 -1.89,1.42 -2.95,2.64 -0.87,1 -1.43,1.88 -1.69,2.32 -0.36,0.61 -1.36,2.37 -1.9,4.91 -0.19,0.9 -0.38,2.12 -0.37,3.58 2.2,-0.35 4.4,-0.7 6.6,-1.05"
-      android:strokeWidth="0"
-      android:fillColor="#bde4df"/>
-  <path
-      android:pathData="m106.12,56.89c2.53,0.01 4.2,0.7 5.17,1.24 0.72,0.4 1.39,0.91 2.71,1.92 1.44,1.1 1.75,1.46 2.77,2.23 0.79,0.6 1.97,1.42 3.53,2.24 -3.11,-2.89 -6.21,-5.78 -9.32,-8.67 -0.63,-1.14 -1.46,-2.45 -2.56,-3.8 -0.91,-1.12 -1.82,-2.05 -2.65,-2.81 0.11,2.55 0.22,5.09 0.33,7.64Z"
-      android:strokeWidth="0"
-      android:fillColor="#9a70e2"/>
-  <path
-      android:pathData="m48.35,83.61c-5.66,-7.13 -7.84,-13.84 -8.75,-17.65 -1.39,-5.78 -1.34,-10.84 -1.29,-13.6 0.07,-4 0.52,-7.36 0.96,-9.84 -1.49,4.28 -3.06,10.77 -2.39,18.56 0.24,2.75 0.71,5.23 1.28,7.39 0.14,1.84 0.78,7.21 5.05,11.56 1.79,1.83 3.69,2.93 5.14,3.59Z"
-      android:strokeWidth="0"
-      android:fillColor="#90efef"/>
-  <path
-      android:pathData="m78.07,44.7c-1.92,0.86 -4.4,2.24 -6.87,4.46 -1.22,1.1 -2.22,2.21 -3.02,3.23 -4.64,-0.89 -9.94,-2.21 -15.66,-4.22 -5.03,-1.76 -9.45,-3.73 -13.26,-5.66 2.27,1.45 5.49,3.35 9.55,5.21 2.18,1 3.89,1.66 5.11,2.13 3.85,1.48 6.85,2.37 11.29,3.68 3.39,1 5.67,1.6 9.18,3.01 0.96,0.39 1.75,0.73 2.28,0.96 0.46,-4.26 0.92,-8.53 1.38,-12.79Z"
-      android:strokeWidth="0"
-      android:fillColor="#9a70e2"/>
+  <group android:scaleX="0.8"
+      android:scaleY="0.8"
+      android:translateX="16"
+      android:translateY="16">
+    <path
+        android:pathData="M80,80m-80,0a80,80 0,1 1,160 0a80,80 0,1 1,-160 0"
+        android:strokeWidth="0"
+        android:fillColor="#e8e8fc"/>
+    <path
+        android:pathData="m50.29,117.49h0c-0.2,0 -0.41,0 -0.61,0 -2.4,0 -4.71,-0.4 -6.86,-1.13 -11.28,-0.5 -20.27,-9.81 -20.27,-21.21 0,-9.05 5.66,-16.77 13.63,-19.83 0.39,-3.44 1.6,-6.63 3.43,-9.37 0.7,3.72 1.77,7.62 4.36,11.88 1.4,2.31 5.04,7.67 11.32,11.36 4.85,2.85 7.48,4.4 10.56,4.21 0.52,-0.03 1.89,-0.16 2.34,0.55 0.69,1.09 -1.18,3.41 -1.62,3.96 -0.84,1.05 -3.64,4.19 -11.96,6.17 -2.96,0.7 -7.41,1.44 -12.94,1.19 8.19,4.75 22.19,11.39 39.09,12.14l-30.46,0.07Z"
+        android:strokeWidth="0"
+        android:fillColor="#90efef"/>
+    <path
+        android:pathData="m112.46,58.82c-0.93,-0.64 -1.96,-1.21 -3.08,-1.51 -1.03,-0.28 -5.02,-1.19 -8.6,1.16 -0.69,0.45 -2.8,1.84 -3.63,4.37 -0.92,2.78 -0.65,8.01 -1.16,9.65 -0.05,0.15 -0.15,0.43 -0.39,0.68 -0.41,0.43 -1.07,0.62 -1.65,0.54 -0.43,-0.06 -0.72,-0.25 -1.03,-0.45 -0.44,-0.29 -0.71,-0.61 -0.87,-0.79 -0.94,-1.07 -1.21,-2.25 -1.27,-2.5 -0.61,-2.36 -5.22,-6.64 -5.62,-7.02 -4.76,-4.42 -10.73,-6.63 -17.54,-8.72 -0.21,-0.06 -0.41,-0.13 -0.61,-0.19 4.62,-6.94 12.51,-11.52 21.48,-11.52 10.89,0 20.21,6.76 23.98,16.31Z"
+        android:strokeWidth="0"
+        android:fillColor="#9a70e2"/>
+    <path
+        android:pathData="m137.46,95.71c0,12.03 -9.75,21.78 -21.78,21.78 -0.84,0 -1.68,-0.05 -2.5,-0.14l-25.96,0.06c13.37,-0.68 19.79,-5.29 21.87,-7.53 4.43,-4.74 5.85,-10.87 5.85,-10.87 1.2,-5.18 0.38,-10.1 0.03,-12.2 -0.69,-4.14 -1.6,-5.14 -1.5,-8.74 0.02,-0.97 0.08,-2.4 0.46,-4.08 0.58,-0.05 1.16,-0.07 1.74,-0.07 12.03,0 21.78,9.75 21.78,21.78Z"
+        android:strokeWidth="0"
+        android:fillColor="#bde4df"/>
+    <path
+        android:pathData="m113.47,78.07c-0.09,3.6 0.81,4.6 1.5,8.74 0.35,2.1 1.17,7.02 -0.03,12.2 0,0 -1.42,6.12 -5.85,10.87 -2.08,2.24 -8.5,6.85 -21.87,7.53l-6.48,0.02c-16.9,-0.75 -30.9,-7.39 -39.09,-12.14 5.53,0.25 9.98,-0.49 12.94,-1.19 8.32,-1.98 11.12,-5.12 11.96,-6.17 0.44,-0.55 2.31,-2.87 1.62,-3.96 -0.45,-0.72 -1.83,-0.58 -2.34,-0.55 -3.08,0.19 -5.71,-1.36 -10.56,-4.21 -6.28,-3.7 -9.92,-9.06 -11.32,-11.36 -2.59,-4.26 -3.66,-8.16 -4.36,-11.88 -0.22,-1.16 -0.4,-2.31 -0.58,-3.45 -0.71,-4.49 -1.27,-11.46 0.25,-20 1.68,1.08 4.06,2.51 7.02,4 1.25,0.63 5.22,2.59 11.83,4.85 4.34,1.48 6.44,1.95 8.88,2.67 0.2,0.06 0.41,0.12 0.61,0.19 6.81,2.09 12.78,4.3 17.54,8.72 0.41,0.38 5.02,4.66 5.62,7.02 0.06,0.25 0.33,1.43 1.27,2.5 0.16,0.18 0.44,0.51 0.87,0.79 0.31,0.2 0.6,0.39 1.03,0.45 0.58,0.08 1.24,-0.11 1.65,-0.54 0.24,-0.26 0.34,-0.54 0.39,-0.68 0.51,-1.64 0.24,-6.87 1.16,-9.65 0.84,-2.53 2.94,-3.92 3.63,-4.37 3.58,-2.36 7.57,-1.44 8.6,-1.16 1.12,0.3 2.15,0.87 3.08,1.51 0.92,0.64 1.75,1.35 2.48,1.95 0.61,0.5 1.49,1.28 2.92,2.24 1.04,0.7 1.93,1.21 2.53,1.53 -1.26,0.88 -3.51,2.7 -5.11,5.79 -0.67,1.29 -1.09,2.54 -1.35,3.67 -0.39,1.67 -0.44,3.1 -0.46,4.08Z"
+        android:strokeWidth="0"
+        android:fillColor="#fff"/>
+    <path
+        android:pathData="M106.9,63.42m-1.12,0a1.12,1.12 0,1 1,2.24 0a1.12,1.12 0,1 1,-2.24 0"
+        android:strokeWidth="0"
+        android:fillColor="#9a70e2"/>
+    <path
+        android:pathData="m136.2,103.05c0.39,-1.37 3.3,-12.25 -3.49,-20.94 -3.46,-4.43 -8.28,-6.37 -8.9,-6.62 -3.21,-1.29 -6.07,-1.54 -7.87,-1.56 0.23,-1.09 0.58,-2.34 1.12,-3.68 0.99,-2.48 2.28,-4.37 3.35,-5.71 -0.82,0.57 -1.89,1.42 -2.95,2.64 -0.87,1 -1.43,1.88 -1.69,2.32 -0.36,0.61 -1.36,2.37 -1.9,4.91 -0.19,0.9 -0.38,2.12 -0.37,3.58 2.2,-0.35 4.4,-0.7 6.6,-1.05"
+        android:strokeWidth="0"
+        android:fillColor="#bde4df"/>
+    <path
+        android:pathData="m106.12,56.89c2.53,0.01 4.2,0.7 5.17,1.24 0.72,0.4 1.39,0.91 2.71,1.92 1.44,1.1 1.75,1.46 2.77,2.23 0.79,0.6 1.97,1.42 3.53,2.24 -3.11,-2.89 -6.21,-5.78 -9.32,-8.67 -0.63,-1.14 -1.46,-2.45 -2.56,-3.8 -0.91,-1.12 -1.82,-2.05 -2.65,-2.81 0.11,2.55 0.22,5.09 0.33,7.64Z"
+        android:strokeWidth="0"
+        android:fillColor="#9a70e2"/>
+    <path
+        android:pathData="m48.35,83.61c-5.66,-7.13 -7.84,-13.84 -8.75,-17.65 -1.39,-5.78 -1.34,-10.84 -1.29,-13.6 0.07,-4 0.52,-7.36 0.96,-9.84 -1.49,4.28 -3.06,10.77 -2.39,18.56 0.24,2.75 0.71,5.23 1.28,7.39 0.14,1.84 0.78,7.21 5.05,11.56 1.79,1.83 3.69,2.93 5.14,3.59Z"
+        android:strokeWidth="0"
+        android:fillColor="#90efef"/>
+    <path
+        android:pathData="m78.07,44.7c-1.92,0.86 -4.4,2.24 -6.87,4.46 -1.22,1.1 -2.22,2.21 -3.02,3.23 -4.64,-0.89 -9.94,-2.21 -15.66,-4.22 -5.03,-1.76 -9.45,-3.73 -13.26,-5.66 2.27,1.45 5.49,3.35 9.55,5.21 2.18,1 3.89,1.66 5.11,2.13 3.85,1.48 6.85,2.37 11.29,3.68 3.39,1 5.67,1.6 9.18,3.01 0.96,0.39 1.75,0.73 2.28,0.96 0.46,-4.26 0.92,-8.53 1.38,-12.79Z"
+        android:strokeWidth="0"
+        android:fillColor="#9a70e2"/>
+  </group>
 </vector>
